refactor(all): clean IDE warnings and fix application.yml Redis config
- fix(config): change deprecated spring.redis to spring.data.redis prefix
- refactor: remove 20+ unused imports across boot/common/message/system/user
- refactor: make 30+ private helper methods static (convertToVO, get*Label,
  build*, getClientIp, hasText, etc.)
- refactor: replace .collect(Collectors.toList()) with .toList() where safe
- test: all unit tests pass (59/59), integration test script passes 12/12

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>